force-app/main/default/objects/Product2/fields/md_comm_pack__Protect_Name__c.field-meta.xml
<CustomField>
    <fullName>md_comm_pack__Protect_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protect Name</label>
    <type>Checkbox</type>
</CustomField>