force-app/main/default/objects/Product2/fields/webkul_wws__ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__ContentDocumentId__c</fullName>
    <label>ContentDocumentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>