force-app/main/default/objects/Product2/fields/webkul_wws__woo_comment_count__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_comment_count__c</fullName>
    <label>woo comment count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>