force-app/main/default/objects/Product2/fields/webkul_wws__woo_Comment_Status__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Comment_Status__c</fullName>
    <description>Comment Status In Woo Commerce</description>
    <inlineHelpText>Comment Status In Woo Commerce</inlineHelpText>
    <label>woo Comment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>