force-app/main/default/objects/Product2/fields/webkul_wws__woo_Menu_Order__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Menu_Order__c</fullName>
    <description>Menu order In woo Commerce</description>
    <inlineHelpText>menu order in woo commerce</inlineHelpText>
    <label>woo Menu Order</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>