force-app/main/default/objects/Product2/fields/webkul_wws__woo_Post_Author__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Post_Author__c</fullName>
    <description>Post Author Of woo Commerce</description>
    <inlineHelpText>Post Author Of woo Commerce</inlineHelpText>
    <label>Woo Post Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>