force-app/main/default/objects/Product2/fields/webkul_wws__woo_Post_Content__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Post_Content__c</fullName>
    <description>Post Content In woo Commerce</description>
    <inlineHelpText>Post Content In woo Commerce</inlineHelpText>
    <label>Woo Post Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>