force-app/main/default/objects/Product2/fields/webkul_wws__woo_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Post_Date__c</fullName>
    <description>Post Date Of product in woo Commerce</description>
    <inlineHelpText>Post Date Of product in woo Commerce</inlineHelpText>
    <label>Woo Post Date</label>
    <type>Date</type>
</CustomField>