force-app/main/default/objects/Product2/fields/webkul_wws__Woo_Post_Description__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Woo_Post_Description__c</fullName>
    <label>Woo Post Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>