force-app/main/default/objects/Product2/fields/webkul_wws__woo_Post_excerpt__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Post_excerpt__c</fullName>
    <label>woo Post excerpt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>