force-app/main/default/objects/Product2/fields/webkul_wws__woo_Post_id__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Post_id__c</fullName>
    <externalId>true</externalId>
    <label>woo Post ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>