force-app/main/default/objects/Product2/fields/webkul_wws__woo_post_Mime_Type__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_post_Mime_Type__c</fullName>
    <description>Post Mime Type In woo Commerce</description>
    <inlineHelpText>Post Mime Type in woo commerce</inlineHelpText>
    <label>woo post Mime Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>