force-app/main/default/objects/Product2/fields/webkul_wws__woo_Post_Name__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Post_Name__c</fullName>
    <description>Post Name In Woo Commerce</description>
    <inlineHelpText>Post Name in woo Commerce</inlineHelpText>
    <label>Woo Post Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>