force-app/main/default/objects/Product2/fields/webkul_wws__woo_Post_parent__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Post_parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Of Post in woo Commerce</description>
    <inlineHelpText>Parent Of Post in woo Commerce</inlineHelpText>
    <label>Woo Post parent</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>