force-app/main/default/objects/Product2/fields/webkul_wws__woo_post_Status__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_post_Status__c</fullName>
    <description>Post Status In Woo Commerce</description>
    <inlineHelpText>post status in woo Commerce</inlineHelpText>
    <label>Woo post Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>