force-app/main/default/objects/Product2/fields/webkul_wws__woo_Post_Title__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Post_Title__c</fullName>
    <description>Post Tittle Of woo Commerce</description>
    <inlineHelpText>Post Tittle Of woo Commerce</inlineHelpText>
    <label>woo Post Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>