force-app/main/default/objects/Product2/fields/webkul_wws__woo_Post_type__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Post_type__c</fullName>
    <description>Post Type In woo Commerce</description>
    <inlineHelpText>post type in woo Commerce</inlineHelpText>
    <label>Woo Post type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>