force-app/main/default/objects/Product2/fields/webkul_wws__Woo_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Woo_Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>Woo Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>