force-app/main/default/objects/Product2/fields/webkul_wws__woo_product_length__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_product_length__c</fullName>
    <label>Product Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>