force-app/main/default/objects/Product2/fields/webkul_wws__woo_Product_SKu__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Product_SKu__c</fullName>
    <label>Woo Product SKu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>