force-app/main/default/objects/Product2/fields/webkul_wws__woo_product_weight__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_product_weight__c</fullName>
    <label>Product Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>