force-app/main/default/objects/Product2/fields/webkul_wws__woo_Thumbnail_ID__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Thumbnail_ID__c</fullName>
    <label>woo Thumbnail ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>