force-app/main/default/objects/Product2/fields/webkul_wws__woo_Thumbnail_Image__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Thumbnail_Image__c</fullName>
    <formula>IMAGE( IF( BEGINS(webkul_wws__woo_Thumbnail_ID__c, &apos;068&apos;) , &quot;/sfc/servlet.shepherd/version/download/&quot;, &quot;/servlet/servlet.FileDownload?file=&quot;) +webkul_wws__woo_Thumbnail_ID__c, Name+&quot; Image&quot; , 200,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Woo Thumbnail Image</label>
    <type>Text</type>
</CustomField>