force-app/main/default/objects/Product2/fields/webkul_wws__woo_units_in_box__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_units_in_box__c</fullName>
    <label>Units In Box</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>