force-app/main/default/objects/Product2/validationRules/webkul_wws__Product_Insert_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>webkul_wws__Product_Insert_Rule</fullName>
    <active>false</active>
    <description>eShopSync woocommerce rule to prevent product insert from unauthorized sources.</description>
    <errorConditionFormula>OR(ISNULL(webkul_wws__eShopSync_Config__c), NOT(CONTAINS(webkul_wws__Woo_Product_ID__c, webkul_wws__eShopSync_Config__r.webkul_wws__Store_Unique_Code__c )))</errorConditionFormula>
    <errorMessage>Syncing from this site not allowed.</errorMessage>
</ValidationRule>