force-app/main/default/objects/Product2/listViews/webkul_wws__Products_Details.listView-meta.xml
<ListView>
    <fullName>webkul_wws__Products_Details</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <label>Products Details</label>
</ListView>